syntax = "proto3";
package intertx;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/cosmos/interchain-accounts/x/inter-tx/types";

import "gogoproto/gogo.proto";

import "ibc/core/client/v1/client.proto";
import "cosmos/base/v1beta1/coin.proto";

service Msg {
  rpc Register(MsgRegisterAccount) returns (MsgRegisterAccountResponse);
  rpc Send(MsgSend) returns (MsgSendResponse);
}

//MsgRegisterAccount is used to register an interchain account on a target chain 
message MsgRegisterAccount {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // the port by which the packet will be sent
  string source_port = 2 [(gogoproto.moretags) = "yaml:\"source_port\""];

  // the channel by which the packet will be sent
  string source_channel = 3 [(gogoproto.moretags) = "yaml:\"source_channel\""];

  string owner=6;
}

message MsgRegisterAccountResponse {}

// MsgSend is used to send coins from an interchain account to another account on the same chain
message MsgSend {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // the port by which the packet will be sent
  string chain_type = 1 [(gogoproto.moretags) = "yaml:\"chain_type\""];
  string source_port = 2 [(gogoproto.moretags) = "yaml:\"source_port\""];

  // the channel by which the packet will be sent
  string source_channel = 3 [(gogoproto.moretags) = "yaml:\"source_channel\""];

  bytes   sender                    = 6 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  bytes   to_address                      = 7 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  repeated cosmos.base.v1beta1.Coin amount = 8
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

// MsgSendResponse defines the Msg/Send response type.
message MsgSendResponse {}

